--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@anthropic-ai/sdk": "^0.71.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google/generative-ai": "^0.24.1",
     "@mui/material": "^5.15.19",
     "katex": "^0.16.27",
     "next": "14.2.3",
